--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,6 @@ typings/
 
 # dotenv environment variables file
 .env
-.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -86,3 +85,8 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
+
+# build directory
+dist
+
+.DS_Store
