--- a/package.json
+++ b/package.json
@@ -7,20 +7,78 @@
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node -r dotenv/config .",
+    "start:watch": "nodemon",
+    "test": "mocha src/*.spec.ts src/**/*.spec.ts",
+    "test:coverage": "nyc mocha src/*.spec.ts src/**/*.spec.ts",
+    "seed": "ts-node -r dotenv/config ./src/seeds/run.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/chai": "^4.1.7",
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/mocha": "^5.2.6",
+    "@types/mongodb-memory-server": "^1.8.0",
+    "@types/mongoose": "^5.5.1",
+    "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.2",
+    "@types/supertest": "^2.0.7",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "mongodb-memory-server": "^5.1.2",
+    "nodemon": "^1.19.0",
+    "nyc": "^14.1.1",
     "prettier": "1.17.1",
+    "source-map-support": "^0.5.12",
+    "supertest": "^4.0.2",
+    "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.4.5"
   },
   "dependencies": {
-    "express": "^4.17.0"
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.9",
+    "morgan": "^1.9.1"
+  },
+  "_moduleAliases": {
+    "@src": "./src"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/*.spec.ts",
+      ".git",
+      "node_modules"
+    ],
+    "watch": [
+      "src",
+      "index.ts"
+    ],
+    "exec": "npm start",
+    "ext": "ts"
+  },
+  "nyc": {
+    "extension": [
+      ".ts"
+    ],
+    "exclude": [
+      "**/*.d.ts",
+      "**/*.spec.ts",
+      "src/index.ts",
+      "src/db/index.ts",
+      "test/*",
+      "src/seeds/run.ts"
+    ],
+    "reporter": [
+      "text"
+    ],
+    "all": true
   }
 }
