--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node -r dotenv/config .",
+    "start:prod": "npm run build && node .",
     "start:watch": "nodemon",
     "test:lint": "tslint -c tslint.json -p tsconfig.json",
     "test:unit-tests": "mocha src/*.spec.ts src/**/*.spec.ts",
