--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
 NODE_ENV=test
 PORT=3000
-MONGO_DB=mongodb://localhost/test
+MONGODB_URI=mongodb://localhost/test
 JWT_SECRET=jwt_secret
 MASTER_USER_EMAIL=example@user.com
 MASTER_USER_PASSWORD=example_password
