--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "semi": true,
   "singleQuote": false,
   "endOfLine": "auto",
-  "useTabs": false
+  "useTabs": false,
+  "arrowParens": "always"
 }
