--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node -r dotenv/config .",
-    "start:prod": "npm run build && node .",
+    "start:prod": "node .",
     "start:watch": "nodemon",
     "test:lint": "eslint src/**/*.ts",
     "test:unit-tests": "mocha src/*.spec.ts src/**/*.spec.ts",
