--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/chai": "^4.1.7",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mocha": "^5.2.6",
@@ -29,6 +30,7 @@
     "@types/mongoose-paginate-v2": "^1.0.2",
     "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.2",
+    "@types/ramda": "^0.26.8",
     "@types/supertest": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
@@ -55,7 +57,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.9",
     "mongoose-paginate-v2": "^1.2.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "ramda": "^0.26.1"
   },
   "nodemonConfig": {
     "ignore": [
