--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/chai": "^4.1.7",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
+    "@types/hapi__joi": "^15.0.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mocha": "^5.2.6",
     "@types/mongodb-memory-server": "^1.8.0",
@@ -50,6 +51,7 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
+    "@hapi/joi": "^15.0.3",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
