--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:unit-tests": "mocha src/*.spec.ts src/**/*.spec.ts",
     "test:coverage": "nyc mocha src/*.spec.ts src/**/*.spec.ts",
     "test": "npm run test:lint && npm run test:unit-tests",
-    "seed": "ts-node -r dotenv/config ./src/seeds/run.ts",
+    "seed": "node ./dist/seeds/run.js",
     "githook": "npm run test:lint:fix && npm run test:unit-tests"
   },
   "author": "",
